--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             minifyEnabled false
         }
     }
+    dataBinding.enabled=true;
+    //  Enable Data Binding in your application
+
 
 }
 
@@ -24,5 +27,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    // TODO (1) Add the compile dependency for the constraint layout support library
+    //  Add the compile dependency for the constraint layout support library
 }
